--- a/page_facts.html
+++ b/page_facts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Мир автогонок - Факты</title>
+<title>Eneworld Race - Факты</title>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
