--- a/page_facts.html
+++ b/page_facts.html
@@ -75,7 +75,7 @@
         </div>
         
         <div id="footer">
-           &copy; Артём Сороков
+           &copy; 2020 Студент группы ИКБО-10-19 Артём Сороков
         </div>
     </section>
     
